prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__group_all.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom a=albums\ntake 10\njoin tracks (==album_id)\ngroup {a.album_id, a.title} (aggregate price = (sum tracks.unit_price | math.round 2))\nsort album_id\n"
input_file: prqlc/prqlc/tests/integration/queries/group_all.prql
---
frames:
- - 1:27-34
  - columns:
    - !All
      input_id: 133
      except: []
    inputs:
    - id: 133
      name: a
      table:
      - default_db
      - albums
- - 1:35-59
  - columns:
    - !All
      input_id: 133
      except: []
    - !All
      input_id: 127
      except: []
    inputs:
    - id: 133
      name: a
      table:
      - default_db
      - albums
    - id: 127
      name: tracks
      table:
      - default_db
      - tracks
- - 1:89-145
  - columns:
    - !Single
      name:
      - a
      - album_id
      target_id: 143
      target_name: null
    - !Single
      name:
      - a
      - title
      target_id: 144
      target_name: null
    - !Single
      name:
      - price
      target_id: 162
      target_name: null
    inputs:
    - id: 133
      name: a
      table:
      - default_db
      - albums
    - id: 127
      name: tracks
      table:
      - default_db
      - tracks
- - 1:147-160
  - columns:
    - !Single
      name:
      - a
      - album_id
      target_id: 143
      target_name: null
    - !Single
      name:
      - a
      - title
      target_id: 144
      target_name: null
    - !Single
      name:
      - price
      target_id: 162
      target_name: null
    inputs:
    - id: 133
      name: a
      table:
      - default_db
      - albums
    - id: 127
      name: tracks
      table:
      - default_db
      - tracks
nodes:
- id: 127
  kind: Ident
  span: 1:40-46
  ident: !Ident
  - default_db
  - tracks
  parent: 142
- id: 133
  kind: Ident
  span: 1:13-26
  ident: !Ident
  - default_db
  - albums
  parent: 136
- id: 136
  kind: 'TransformCall: Take'
  span: 1:27-34
  children:
  - 133
  - 137
  parent: 142
- id: 137
  kind: Literal
  parent: 136
- id: 138
  kind: RqOperator
  span: 1:48-58
  targets:
  - 140
  - 141
  parent: 142
- id: 140
  kind: Ident
  span: 1:50-58
  ident: !Ident
  - this
  - a
  - album_id
  targets:
  - 133
- id: 141
  kind: Ident
  span: 1:50-58
  ident: !Ident
  - that
  - tracks
  - album_id
  targets:
  - 127
- id: 142
  kind: 'TransformCall: Join'
  span: 1:35-59
  children:
  - 136
  - 127
  - 138
  parent: 170
- id: 143
  kind: Ident
  span: 1:67-77
  ident: !Ident
  - this
  - a
  - album_id
  targets:
  - 133
  parent: 145
- id: 144
  kind: Ident
  span: 1:79-86
  ident: !Ident
  - this
  - a
  - title
  targets:
  - 133
  parent: 145
- id: 145
  kind: Tuple
  span: 1:66-87
  children:
  - 143
  - 144
  parent: 170
- id: 162
  kind: RqOperator
  span: 1:132-144
  alias: price
  targets:
  - 165
  - 166
  parent: 169
- id: 165
  kind: Literal
  span: 1:143-144
- id: 166
  kind: RqOperator
  span: 1:108-129
  targets:
  - 168
- id: 168
  kind: Ident
  span: 1:112-129
  ident: !Ident
  - this
  - tracks
  - unit_price
  targets:
  - 127
- id: 169
  kind: Tuple
  span: 1:132-144
  children:
  - 162
  parent: 170
- id: 170
  kind: 'TransformCall: Aggregate'
  span: 1:89-145
  children:
  - 142
  - 169
  - 145
  parent: 175
- id: 173
  kind: Ident
  span: 1:152-160
  ident: !Ident
  - this
  - a
  - album_id
  targets:
  - 143
  parent: 175
- id: 175
  kind: 'TransformCall: Sort'
  span: 1:147-160
  children:
  - 170
  - 173
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:13-17
              args:
              - Ident:
                - albums
                span: 1:20-26
                alias: a
            span: 1:13-26
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:27-31
              args:
              - Literal:
                  Integer: 10
                span: 1:32-34
            span: 1:27-34
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:35-39
              args:
              - Ident:
                - tracks
                span: 1:40-46
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - album_id
                    span: 1:50-58
                span: 1:48-58
            span: 1:35-59
          - FuncCall:
              name:
                Ident:
                - group
                span: 1:60-65
              args:
              - Tuple:
                - Ident:
                  - a
                  - album_id
                  span: 1:67-77
                - Ident:
                  - a
                  - title
                  span: 1:79-86
                span: 1:66-87
              - FuncCall:
                  name:
                    Ident:
                    - aggregate
                    span: 1:89-98
                  args:
                  - Pipeline:
                      exprs:
                      - FuncCall:
                          name:
                            Ident:
                            - sum
                            span: 1:108-111
                          args:
                          - Ident:
                            - tracks
                            - unit_price
                            span: 1:112-129
                        span: 1:108-129
                      - FuncCall:
                          name:
                            Ident:
                            - math
                            - round
                            span: 1:132-142
                          args:
                          - Literal:
                              Integer: 2
                            span: 1:143-144
                        span: 1:132-144
                    span: 1:108-144
                    alias: price
                span: 1:89-145
            span: 1:60-146
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:147-151
              args:
              - Ident:
                - album_id
                span: 1:152-160
            span: 1:147-160
        span: 1:13-160
    span: 1:0-160
