prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__group_sort_derive_select_join.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "s\"SELECT album_id,title,artist_id FROM albums\"\ngroup {artist_id} (aggregate { album_title_count = count this.`title`})\nsort {this.artist_id, this.album_title_count}\nderive {new_album_count = this.album_title_count}\nselect {this.artist_id, this.new_album_count}\njoin side:left ( s\"SELECT artist_id,name as artist_name FROM artists\" ) (this.artist_id == that.artist_id)\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort_derive_select_join.prql
---
frames:
- - 1:66-117
  - columns:
    - !Single
      name:
      - _literal_134
      - artist_id
      target_id: 135
      target_name: null
    - !Single
      name:
      - album_title_count
      target_id: 154
      target_name: null
    inputs:
    - id: 134
      name: _literal_134
      table:
      - default_db
      - _literal_134
- - 1:119-164
  - columns:
    - !Single
      name:
      - _literal_134
      - artist_id
      target_id: 135
      target_name: null
    - !Single
      name:
      - album_title_count
      target_id: 154
      target_name: null
    inputs:
    - id: 134
      name: _literal_134
      table:
      - default_db
      - _literal_134
- - 1:165-214
  - columns:
    - !Single
      name:
      - _literal_134
      - artist_id
      target_id: 135
      target_name: null
    - !Single
      name:
      - album_title_count
      target_id: 154
      target_name: null
    - !Single
      name:
      - new_album_count
      target_id: 164
      target_name: null
    inputs:
    - id: 134
      name: _literal_134
      table:
      - default_db
      - _literal_134
- - 1:215-260
  - columns:
    - !Single
      name:
      - _literal_134
      - artist_id
      target_id: 167
      target_name: null
    - !Single
      name:
      - new_album_count
      target_id: 168
      target_name: null
    inputs:
    - id: 134
      name: _literal_134
      table:
      - default_db
      - _literal_134
- - 1:261-367
  - columns:
    - !Single
      name:
      - _literal_134
      - artist_id
      target_id: 167
      target_name: null
    - !Single
      name:
      - new_album_count
      target_id: 168
      target_name: null
    - !All
      input_id: 121
      except: []
    inputs:
    - id: 134
      name: _literal_134
      table:
      - default_db
      - _literal_134
    - id: 121
      name: _literal_121
      table:
      - default_db
      - _literal_121
nodes:
- id: 121
  kind: SString
  span: 1:278-330
  parent: 175
- id: 134
  kind: SString
  span: 1:0-46
  parent: 157
- id: 135
  kind: Ident
  span: 1:54-63
  ident: !Ident
  - this
  - _literal_134
  - artist_id
  targets:
  - 134
  parent: 136
- id: 136
  kind: Tuple
  span: 1:53-64
  children:
  - 135
  parent: 157
- id: 154
  kind: RqOperator
  span: 1:98-116
  alias: album_title_count
  targets:
  - 155
  parent: 156
- id: 155
  kind: Literal
- id: 156
  kind: Tuple
  span: 1:76-117
  children:
  - 154
  parent: 157
- id: 157
  kind: 'TransformCall: Aggregate'
  span: 1:66-117
  children:
  - 134
  - 156
  - 136
  parent: 163
- id: 160
  kind: Ident
  span: 1:125-139
  ident: !Ident
  - this
  - _literal_134
  - artist_id
  targets:
  - 135
  parent: 163
- id: 161
  kind: Ident
  span: 1:141-163
  ident: !Ident
  - this
  - album_title_count
  targets:
  - 154
  parent: 163
- id: 163
  kind: 'TransformCall: Sort'
  span: 1:119-164
  children:
  - 157
  - 160
  - 161
  parent: 166
- id: 164
  kind: Ident
  span: 1:191-213
  alias: new_album_count
  ident: !Ident
  - this
  - album_title_count
  targets:
  - 154
  parent: 165
- id: 165
  kind: Tuple
  span: 1:172-214
  children:
  - 164
  parent: 166
- id: 166
  kind: 'TransformCall: Derive'
  span: 1:165-214
  children:
  - 163
  - 165
  parent: 170
- id: 167
  kind: Ident
  span: 1:223-237
  ident: !Ident
  - this
  - _literal_134
  - artist_id
  targets:
  - 135
  parent: 169
- id: 168
  kind: Ident
  span: 1:239-259
  ident: !Ident
  - this
  - new_album_count
  targets:
  - 164
  parent: 169
- id: 169
  kind: Tuple
  span: 1:222-260
  children:
  - 167
  - 168
  parent: 170
- id: 170
  kind: 'TransformCall: Select'
  span: 1:215-260
  children:
  - 166
  - 169
  parent: 175
- id: 171
  kind: RqOperator
  span: 1:334-366
  targets:
  - 173
  - 174
  parent: 175
- id: 173
  kind: Ident
  span: 1:334-348
  ident: !Ident
  - this
  - _literal_134
  - artist_id
  targets:
  - 167
- id: 174
  kind: Ident
  span: 1:352-366
  ident: !Ident
  - that
  - _literal_121
  - artist_id
  targets:
  - 121
- id: 175
  kind: 'TransformCall: Join'
  span: 1:261-367
  children:
  - 170
  - 121
  - 171
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - SString:
            - !String SELECT album_id,title,artist_id FROM albums
            span: 1:0-46
          - FuncCall:
              name:
                Ident:
                - group
                span: 1:47-52
              args:
              - Tuple:
                - Ident:
                  - artist_id
                  span: 1:54-63
                span: 1:53-64
              - FuncCall:
                  name:
                    Ident:
                    - aggregate
                    span: 1:66-75
                  args:
                  - Tuple:
                    - FuncCall:
                        name:
                          Ident:
                          - count
                          span: 1:98-103
                        args:
                        - Ident:
                          - this
                          - title
                          span: 1:104-116
                      span: 1:98-116
                      alias: album_title_count
                    span: 1:76-117
                span: 1:66-117
            span: 1:47-118
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:119-123
              args:
              - Tuple:
                - Ident:
                  - this
                  - artist_id
                  span: 1:125-139
                - Ident:
                  - this
                  - album_title_count
                  span: 1:141-163
                span: 1:124-164
            span: 1:119-164
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:165-171
              args:
              - Tuple:
                - Ident:
                  - this
                  - album_title_count
                  span: 1:191-213
                  alias: new_album_count
                span: 1:172-214
            span: 1:165-214
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:215-221
              args:
              - Tuple:
                - Ident:
                  - this
                  - artist_id
                  span: 1:223-237
                - Ident:
                  - this
                  - new_album_count
                  span: 1:239-259
                span: 1:222-260
            span: 1:215-260
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:261-265
              args:
              - SString:
                - !String SELECT artist_id,name as artist_name FROM artists
                span: 1:278-330
              - Binary:
                  left:
                    Ident:
                    - this
                    - artist_id
                    span: 1:334-348
                  op: Eq
                  right:
                    Ident:
                    - that
                    - artist_id
                    span: 1:352-366
                span: 1:334-366
              named_args:
                side:
                  Ident:
                  - left
                  span: 1:271-275
            span: 1:261-367
        span: 1:0-367
    span: 1:0-367
