prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__group_sort_limit_take.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# Compute the 3 longest songs for each genre and sort by genre\n# mssql:test\nfrom tracks\nselect {genre_id,milliseconds}\ngroup {genre_id} (\n  sort {-milliseconds}\n  take 3\n)\njoin genres (==genre_id)\nselect {name, milliseconds}\nsort {+name,-milliseconds}\n"
input_file: prqlc/prqlc/tests/integration/queries/group_sort_limit_take.prql
---
frames:
- - 1:88-118
  - columns:
    - !Single
      name:
      - tracks
      - genre_id
      target_id: 138
      target_name: null
    - !Single
      name:
      - tracks
      - milliseconds
      target_id: 139
      target_name: null
    inputs:
    - id: 136
      name: tracks
      table:
      - default_db
      - tracks
- - 1:163-169
  - columns:
    - !Single
      name:
      - tracks
      - genre_id
      target_id: 142
      target_name: null
    - !Single
      name:
      - tracks
      - milliseconds
      target_id: 139
      target_name: null
    inputs:
    - id: 136
      name: tracks
      table:
      - default_db
      - tracks
- - 1:172-196
  - columns:
    - !Single
      name:
      - tracks
      - genre_id
      target_id: 142
      target_name: null
    - !Single
      name:
      - tracks
      - milliseconds
      target_id: 139
      target_name: null
    - !All
      input_id: 127
      except: []
    inputs:
    - id: 136
      name: tracks
      table:
      - default_db
      - tracks
    - id: 127
      name: genres
      table:
      - default_db
      - genres
- - 1:197-224
  - columns:
    - !Single
      name:
      - genres
      - name
      target_id: 180
      target_name: null
    - !Single
      name:
      - tracks
      - milliseconds
      target_id: 181
      target_name: null
    inputs:
    - id: 136
      name: tracks
      table:
      - default_db
      - tracks
    - id: 127
      name: genres
      table:
      - default_db
      - genres
- - 1:225-251
  - columns:
    - !Single
      name:
      - genres
      - name
      target_id: 180
      target_name: null
    - !Single
      name:
      - tracks
      - milliseconds
      target_id: 181
      target_name: null
    inputs:
    - id: 136
      name: tracks
      table:
      - default_db
      - tracks
    - id: 127
      name: genres
      table:
      - default_db
      - genres
nodes:
- id: 127
  kind: Ident
  span: 1:177-183
  ident: !Ident
  - default_db
  - genres
  parent: 179
- id: 136
  kind: Ident
  span: 1:76-87
  ident: !Ident
  - default_db
  - tracks
  parent: 141
- id: 138
  kind: Ident
  span: 1:96-104
  ident: !Ident
  - this
  - tracks
  - genre_id
  targets:
  - 136
  parent: 140
- id: 139
  kind: Ident
  span: 1:105-117
  ident: !Ident
  - this
  - tracks
  - milliseconds
  targets:
  - 136
  parent: 140
- id: 140
  kind: Tuple
  span: 1:95-118
  children:
  - 138
  - 139
  parent: 141
- id: 141
  kind: 'TransformCall: Select'
  span: 1:88-118
  children:
  - 136
  - 140
  parent: 171
- id: 142
  kind: Ident
  span: 1:126-134
  ident: !Ident
  - this
  - tracks
  - genre_id
  targets:
  - 138
  parent: 143
- id: 143
  kind: Tuple
  span: 1:125-135
  children:
  - 142
- id: 167
  kind: Ident
  span: 1:147-159
  ident: !Ident
  - this
  - tracks
  - milliseconds
  targets:
  - 139
- id: 171
  kind: 'TransformCall: Take'
  span: 1:163-169
  children:
  - 141
  - 172
  parent: 179
- id: 172
  kind: Literal
  parent: 171
- id: 175
  kind: RqOperator
  span: 1:185-195
  targets:
  - 177
  - 178
  parent: 179
- id: 177
  kind: Ident
  span: 1:187-195
  ident: !Ident
  - this
  - tracks
  - genre_id
  targets:
  - 142
- id: 178
  kind: Ident
  span: 1:187-195
  ident: !Ident
  - that
  - genres
  - genre_id
  targets:
  - 127
- id: 179
  kind: 'TransformCall: Join'
  span: 1:172-196
  children:
  - 171
  - 127
  - 175
  parent: 183
- id: 180
  kind: Ident
  span: 1:205-209
  ident: !Ident
  - this
  - genres
  - name
  targets:
  - 127
  parent: 182
- id: 181
  kind: Ident
  span: 1:211-223
  ident: !Ident
  - this
  - tracks
  - milliseconds
  targets:
  - 139
  parent: 182
- id: 182
  kind: Tuple
  span: 1:204-224
  children:
  - 180
  - 181
  parent: 183
- id: 183
  kind: 'TransformCall: Select'
  span: 1:197-224
  children:
  - 179
  - 182
  parent: 189
- id: 184
  kind: Ident
  span: 1:231-236
  ident: !Ident
  - this
  - genres
  - name
  targets:
  - 180
  parent: 189
- id: 187
  kind: Ident
  span: 1:238-250
  ident: !Ident
  - this
  - tracks
  - milliseconds
  targets:
  - 181
  parent: 189
- id: 189
  kind: 'TransformCall: Sort'
  span: 1:225-251
  children:
  - 183
  - 184
  - 187
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:76-80
              args:
              - Ident:
                - tracks
                span: 1:81-87
            span: 1:76-87
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:88-94
              args:
              - Tuple:
                - Ident:
                  - genre_id
                  span: 1:96-104
                - Ident:
                  - milliseconds
                  span: 1:105-117
                span: 1:95-118
            span: 1:88-118
          - FuncCall:
              name:
                Ident:
                - group
                span: 1:119-124
              args:
              - Tuple:
                - Ident:
                  - genre_id
                  span: 1:126-134
                span: 1:125-135
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - sort
                        span: 1:140-144
                      args:
                      - Tuple:
                        - Unary:
                            op: Neg
                            expr:
                              Ident:
                              - milliseconds
                              span: 1:147-159
                          span: 1:146-159
                        span: 1:145-160
                    span: 1:140-160
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:163-167
                      args:
                      - Literal:
                          Integer: 3
                        span: 1:168-169
                    span: 1:163-169
                span: 1:140-169
            span: 1:119-171
          - FuncCall:
              name:
                Ident:
                - join
                span: 1:172-176
              args:
              - Ident:
                - genres
                span: 1:177-183
              - Unary:
                  op: EqSelf
                  expr:
                    Ident:
                    - genre_id
                    span: 1:187-195
                span: 1:185-195
            span: 1:172-196
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:197-203
              args:
              - Tuple:
                - Ident:
                  - name
                  span: 1:205-209
                - Ident:
                  - milliseconds
                  span: 1:211-223
                span: 1:204-224
            span: 1:197-224
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:225-229
              args:
              - Tuple:
                - Unary:
                    op: Add
                    expr:
                      Ident:
                      - name
                      span: 1:232-236
                  span: 1:231-236
                - Unary:
                    op: Neg
                    expr:
                      Ident:
                      - milliseconds
                      span: 1:238-250
                  span: 1:237-250
                span: 1:230-251
            span: 1:225-251
        span: 1:76-251
    span: 1:0-251
